Fix spacing bug - appbar

--- a/src/components/Admin/Album/EditAlbum/EditAlbum.scss
+++ b/src/components/Admin/Album/EditAlbum/EditAlbum.scss
@@ -1,7 +1,7 @@
 .albumPage__banner {
   width: fit-content;
   min-width: 1000px;
-  margin: 10em auto 5rem;
+  margin: 0 auto 5rem;
 }
 
 .album__form {
