--- a/src/components/Admin/Dashboard/Dashboard.scss
+++ b/src/components/Admin/Dashboard/Dashboard.scss
@@ -1,5 +1,4 @@
 .dashboard__addAlbum {
-  margin-top: 9em !important;
   margin-left: 1em !important;
   margin-bottom: 2rem !important;
   color: #fff !important;
