--- a/src/components/User/About/About.scss
+++ b/src/components/User/About/About.scss
@@ -1,5 +1,5 @@
 .about {
-  margin-top: 10rem !important;
+  // margin-top: 10rem !important;
 }
 
 .about_details {
