--- a/src/components/User/Albums/Album/Album.scss
+++ b/src/components/User/Albums/Album/Album.scss
@@ -1,6 +1,6 @@
 .album-page__banner {
   width: fit-content;
-  margin: 10em auto 10rem;
+  margin: 0 auto 10rem;
 
   @media screen and (min-width: 850px) {
     min-width: 1000px;
