--- a/src/components/User/Albums/Albums.scss
+++ b/src/components/User/Albums/Albums.scss
@@ -1,3 +1,2 @@
 .albums__heading {
-  margin-top: 3em !important;
 }
