--- a/src/components/User/Homepage/Homepage.scss
+++ b/src/components/User/Homepage/Homepage.scss
@@ -1,4 +1,3 @@
 .homepage__headline {
-  margin-top: 3em !important;
   margin-bottom: 0.2em !important;
 }
